forts/manifests/eventing.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: eventing
    app.kubernetes.io/component: eventing
    app.kubernetes.io/instance: eventing
    app.kubernetes.io/name: eventing
    app.kubernetes.io/version: 2.3.103
    chart: eventing-2.3.103
    domain: qcs-infra
    heritage: Helm
    release: eventing
  name: eventing
  namespace: default
spec:
  ports:
    - name: eventing
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: eventing
    release: eventing
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eventing
    app.kubernetes.io/component: eventing
    app.kubernetes.io/instance: eventing
    app.kubernetes.io/name: eventing
    app.kubernetes.io/version: 2.3.103
    chart: eventing-2.3.103
    domain: qcs-infra
    heritage: Helm
    release: eventing
  name: eventing
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventing
      release: eventing
  template:
    metadata:
      annotations:
        checksum/configs: 54a89fb5aac94297d69773e74136c2aa02aa189f7cc765456f05f06904189ca9
        checksum/secrets: 5de6f4c6d89e8ac9dd037f275975f4a29935da7c63802a6d50f5765b93b6dac9
      labels:
        app: eventing
        messaging-nats-client: "true"
        release: eventing
    spec:
      containers:
        - env:
            - name: NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: FORTRESS_THING_CA_FILE
              value: /run/secrets/qlik.com/eventing/fortressThingCa
            - name: FORTRESS_THING_CERT_FILE
              value: /run/secrets/qlik.com/eventing/fortressThingCert
            - name: FORTRESS_THING_KEY_FILE
              value: /run/secrets/qlik.com/eventing/fortressThingKey
            - name: TOKEN_AUTH_PRIVATE_KEY_FILE
              value: /run/secrets/qlik.com/eventing/tokenAuthPrivateKey
            - name: TOKEN_AUTH_PRIVATE_KEY_ID_FILE
              value: /run/secrets/qlik.com/eventing/tokenAuthPrivateKeyId
            - name: CONDITION_MANAGER_URI
              valueFrom:
                configMapKeyRef:
                  key: conditionManagerUri
                  name: eventing-configs
            - name: EDGE_AUTH_URI
              valueFrom:
                configMapKeyRef:
                  key: edgeAuthUri
                  name: eventing-configs
            - name: EMERGENCY_RESTART_ONLY_EVENTING
              valueFrom:
                configMapKeyRef:
                  key: emergencyRestartOnlyEventing
                  name: eventing-configs
            - name: FEATURE_FLAGS_URI
              valueFrom:
                configMapKeyRef:
                  key: featureFlagsUri
                  name: eventing-configs
            - name: FORTRESS_IOT_CREDENTIAL_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: fortressIotCredentialEndpoint
                  name: eventing-configs
            - name: FORTRESS_MQTT_USE_WEBSOCKET
              valueFrom:
                configMapKeyRef:
                  key: fortressMqttUseWebsocket
                  name: eventing-configs
            - name: FORTRESS_THING_DATA_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: fortressThingDataEndpoint
                  name: eventing-configs
            - name: FORTRESS_THING_NAME
              valueFrom:
                configMapKeyRef:
                  key: fortressThingName
                  name: eventing-configs
            - name: INGRESS_AUTH_URL
              valueFrom:
                configMapKeyRef:
                  key: ingressAuthUrl
                  name: eventing-configs
            - name: IOT_THING_ROLE_ALIAS_NAME
              valueFrom:
                configMapKeyRef:
                  key: iotThingRoleAliasName
                  name: eventing-configs
            - name: KEYS_URI
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: eventing-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: eventing-configs
            - name: NATS_STREAMING_CLUSTER_ID
              valueFrom:
                configMapKeyRef:
                  key: natsStreamingClusterId
                  name: eventing-configs
            - name: NATS_URI
              valueFrom:
                configMapKeyRef:
                  key: natsUri
                  name: eventing-configs
            - name: NOTIFICATION_PREP_URI
              valueFrom:
                configMapKeyRef:
                  key: notificationPrepUri
                  name: eventing-configs
            - name: REDIS_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: redisEnabled
                  name: eventing-configs
            - name: REDIS_URI
              valueFrom:
                configMapKeyRef:
                  key: redisUri
                  name: eventing-configs
            - name: SPACES_URI
              valueFrom:
                configMapKeyRef:
                  key: spacesUri
                  name: eventing-configs
            - name: SUBSCRIPTIONS_URI
              valueFrom:
                configMapKeyRef:
                  key: subscriptionsUri
                  name: eventing-configs
            - name: TENANTS_URI
              valueFrom:
                configMapKeyRef:
                  key: tenantsUri
                  name: eventing-configs
            - name: TRANSPORT_ALERT_NOTIFICATIONS_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: transportAlertNotificationsDisabled
                  name: eventing-configs
            - name: TRANSPORT_FORT_BRIDGE_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: transportFortBridgeDisabled
                  name: eventing-configs
            - name: TRANSPORT_NOTIFICATIONS_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: transportNotificationsDisabled
                  name: eventing-configs
            - name: TRANSPORT_TRIGGERS_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: transportTriggersDisabled
                  name: eventing-configs
            - name: TRANSPORT_USERS_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: transportUsersDisabled
                  name: eventing-configs
            - name: TRANSPORT_WEBSOCKET_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: transportWebsocketDisabled
                  name: eventing-configs
            - name: USE_WEBSOCKET
              valueFrom:
                configMapKeyRef:
                  key: useWebsocket
                  name: eventing-configs
            - name: USERS_URI
              valueFrom:
                configMapKeyRef:
                  key: usersUri
                  name: eventing-configs
            - name: DISABLE_OTLP
              value: "true"
            - name: JAEGER_DISABLED
              value: "true"
            - name: NATS_ENABLED
              value: "true"
            - name: JAEGER_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: OTLP_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: HTTP_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpProxy
                  name: qliksense-configs
            - name: HTTPS_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpsProxy
                  name: qliksense-configs
            - name: NO_PROXY
              valueFrom:
                configMapKeyRef:
                  key: noProxy
                  name: qliksense-configs
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: qliksense-secrets
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/qliksense/mongodbUri
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: qliksense-secrets
            - name: REDIS_PASSWORD_FILE
              value: /run/secrets/qlik.com/qliksense/redisPassword
          image: ghcr.io/qlik-download/eventing:2.3.103
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: eventing
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          volumeMounts:
            - mountPath: /run/secrets/qlik.com/eventing
              name: eventing-secrets
              readOnly: true
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: eventing-secrets
          secret:
            secretName: eventing-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header Connection $connection_upgrade;
      proxy_set_header Upgrade $http_upgrade;
    nginx.ingress.kubernetes.io/auth-url: http://edge-auth.default.svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: eventing
    app.kubernetes.io/component: eventing
    app.kubernetes.io/instance: eventing
    app.kubernetes.io/name: eventing
    app.kubernetes.io/version: 2.3.103
    chart: eventing-2.3.103
    domain: qcs-infra
    heritage: Helm
    release: eventing
  name: eventing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: eventing
                port:
                  number: 8080
            path: /api/v1/events
            pathType: ImplementationSpecific
